--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,3 +35,4 @@ jobs:
         args: >
             -Dsonar.organization=anupdevops
             -Dsonar.projectKey=AnupDevOps_JavaProject
+            -Dsonar.sources=target/
