--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,4 +35,4 @@ jobs:
         args: >
             -Dsonar.organization=anupdevops
             -Dsonar.projectKey=AnupDevOps_JavaProject
-            -Dsonar.sources=target/
+            -Dsonar.sources=/home/runner/work/JavaProject/JavaProject/target/
